index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body,
#root {
  margin: 0;
  padding: 0;
  background-color: #020617;
  /* slate-950 */
}

body {
  margin: 0;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none;
  /* IE and Edge */
  scrollbar-width: none;
  /* Firefox */
}

/* Custom Scrollbar for Dark Contexts */
.scrollbar-dark::-webkit-scrollbar {
  width: 6px;
}

.scrollbar-dark::-webkit-scrollbar-track {
  background: transparent;
}

.scrollbar-dark::-webkit-scrollbar-thumb {
  background: #334155;
  /* slate-700 */
  border-radius: 10px;
}

.scrollbar-dark::-webkit-scrollbar-thumb:hover {
  background: #475569;
  /* slate-600 */
}

